--- a/public_html/assets/css/creative-studio.css
+++ b/public_html/assets/css/creative-studio.css
@@ -11468,9 +11468,9 @@ p {
 }
 
 .contact-card {
-  border-radius: 0.2rem;
+  border-radius: 1rem;
   border: 1px solid #eaf0fc;
-  background: #fff;
+  background: #ebebeb;
   box-shadow: 1px 3px 10px rgba(173, 181, 189, 0.4);
   padding: 40px 0;
   display: -webkit-box;
